WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41594
ThreadingPthreads.cpp should use JNIUtility.h on Android, not outdated jni_utility.h
https://bugs.webkit.org/show_bug.cgi?id=41594
Summary
ThreadingPthreads.cpp should use JNIUtility.h on Android, not outdated jni_ut...
Steve Block
Reported
2010-07-05 01:59:46 PDT
http://trac.webkit.org/changeset/53497
renamed jni_utility.h to JNIUtility.h. The Android-specific include in ThreadingPthreads.cpp should be updated to reflect this.
Attachments
Patch
(927 bytes, patch)
2010-07-05 02:03 PDT
,
Steve Block
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Steve Block
Comment 1
2010-07-05 02:03:41 PDT
Created
attachment 60504
[details]
Patch
WebKit Commit Bot
Comment 2
2010-07-05 10:10:24 PDT
Comment on
attachment 60504
[details]
Patch Clearing flags on attachment: 60504 Committed
r62493
: <
http://trac.webkit.org/changeset/62493
>
WebKit Commit Bot
Comment 3
2010-07-05 10:10:29 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug