2010-07-05  Steve Block  <steveblock@google.com>

Reviewed by Darin Adler.

        ThreadingPthreads.cpp should use JNIUtility.h on Android, not outdated jni_utility.h
        https://bugs.webkit.org/show_bug.cgi?id=41594

        * wtf/ThreadingPthreads.cpp:

Canonical link: https://commits.webkit.org/53408@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62493 268f45cc-cd09-0410-ab3c-d52691b4dbfc